--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,7 @@ ext {
 
 buildscript {
     repositories {
+        mavenLocal()
         flatDir { dirs "libs", "${rootDir}/app/libs" }
         google()
         mavenCentral()
