--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,14 +1,16 @@
 pluginManagement {
-include ':react-native-share'
-project(':react-native-share').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-share/android')
   repositories {
       mavenLocal() // Let's prioritize local Maven repos so that Nix can provide them offline
+      mavenCentral()
+      google()
       gradlePluginPortal()
   }
 }
 
 rootProject.name = 'StatusIm'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
+include ':react-native-share'
+project(':react-native-share').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-share/android')
 include ':react-native-nfc-manager'
 project(':react-native-nfc-manager').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-nfc-manager/android')
 include ':app'
